--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-   "name": "card-template-boilerplate-angular",
+   "name": "fidelis-custom-card",
    "version": "0.0.0",
    "scripts": {
       "ng": "ng",
